# pisces-moon-os-c6

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  c6_bridge.h  ghost_ble.c  ghost_ble.h  ghost_ble_gatt.c  ghost_ble_gatt.h  ghost_bridge.c  ghost_bridge.h  ghost_gps.c  ghost_gps.h  ghost_hid.c  ghost_hid.h  ghost_http.c  ghost_http.h  ghost_main.c  ghost_netscan.c  ghost_netscan.h  ghost_partition.h  ghost_promisc.c  ghost_promisc.h  ghost_rfspectrum.c  ghost_rfspectrum.h  ghost_wifi.c  ghost_wifi.h  ghost_wifi_ducky.c  ghost_wifi_ducky.h  ghost_wpa_hs.c  ghost_wpa_hs.h
